--- a/mibreitGallery.css
+++ b/mibreitGallery.css
@@ -45,5 +45,28 @@
 .mibreit-slideshow-previous svg
 {
     transform:scaleX(-1);
-    width:3rem;height:3rem;margin-top:-1.5rem}.mibreit-thumbview-previous{margin-right:.5rem;margin-left:.5rem}.mibreit-thumbview-previous svg{transform:scaleX(-1);width:3rem;height:3rem;fill:#727f88}.mibreit-thumbview-next{margin-right:.5rem;margin-left:.5rem}.mibreit-thumbview-next svg{width:3rem;height:3rem;fill:#727f88}.mibreit-regular-slideshow,.mibreit-regular-thumb,.mibreit-regular-title{position:relative}.mibreit-fullscreen{position:fixed;box-sizing:border-box;background-color:#181818;overflow:hidden;top:0;padding:1rem;width:100%;height:100%;z-index:100;display:flex;flex-direction:column}.mibreit-fullscreen .width-100{width:100%}.mibreit-fullscreen .flex-grow-1{flex-grow:1}.mibreit-fullscreen .flex-grow-0{flex-grow:0}.mibreit-enter-fullscreen-button{position:absolute;z-index:12;width:2rem;height:2rem;right:.25rem;top:.25rem;opacity:0}.mibreit-fullscreen>.exit-fullscreen{position:absolute;z-index:12;width:3rem;height:3rem;right:1rem;top:1rem}.mibreit-fullscreen>.exit-fullscreen>svg{opacity:.75}.mibreit-imageElement{position:absolute;padding:0;overflow:hidden;z-index:10;width:100%;height:100%}.mibreit-center-box{display:flex;flex-direction:column;width:100%;height:100%}.mibreit-imageElement img{margin:auto;padding:0;align-self:center;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;text-indent:100%;white-space:nowrap;overflow:hidden;flex-shrink:0}.mibreit-imageElement h3{margin-left:-4000px}.mibreit-contextMenu{position:absolute;width:100%;height:100%;padding-left:.5rem;padding-right:.5rem;z-index:11;text-align:center;font-size:1.5rem;background-color:#79756f}.mibreit-thumbs{overflow:hidden;display:flex;flex-direction:row}.mibreit-thumbs-scroller{position:relative;display:flex;flex-direction:row}.mibreit-thumbElement{position:relative;padding:.5rem;width:5rem;height:5rem;flex-shrink:0;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box}.mibreit-thumbElement:hover{transform:scale(1.1)}.mibreit-thumbElement .mibreit-center-box{border:solid;border-width:1px;overflow:hidden}.mibreit-thumbElement img{margin:auto;padding:0;align-self:center;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;text-indent:100%;white-space:nowrap;overflow:hidden;flex-shrink:0}
-    
+    width:3rem;height:3rem;margin-top:-1.5rem}.mibreit-thumbview-previous{margin-right:.5rem;margin-left:.5rem}
+.mibreit-thumbview-previous svg{transform:scaleX(-1);width:3rem;height:3rem;fill:#727f88}
+.mibreit-thumbview-next{margin-right:.5rem;margin-left:.5rem}
+.mibreit-thumbview-next svg{width:3rem;height:3rem;fill:#727f88}
+.mibreit-regular-slideshow,.mibreit-regular-thumb,.mibreit-regular-title{position:relative}
+.mibreit-fullscreen{position:fixed;box-sizing:border-box;background-color:#181818;overflow:hidden;top:0;padding:1rem;width:100%;height:100%;z-index:100;display:flex;flex-direction:column}
+.mibreit-fullscreen .width-100{width:100%}
+.mibreit-fullscreen .flex-grow-1{flex-grow:1}.mibreit-fullscreen .flex-grow-0{flex-grow:0}
+.mibreit-enter-fullscreen-button{position:absolute;z-index:12;width:2rem;height:2rem;right:.25rem;top:.25rem;opacity:0}
+.mibreit-fullscreen>.exit-fullscreen{position:absolute;z-index:12;width:3rem;height:3rem;right:1rem;top:1rem}
+.mibreit-fullscreen>.exit-fullscreen>svg{opacity:.75}
+.mibreit-imageElement{position:absolute;padding:0;overflow:hidden;z-index:10;width:100%;height:100%}
+.mibreit-center-box{display:flex;flex-direction:column;width:100%;height:85%}
+.mibreit-imageElement img{margin:auto;padding:0;align-self:center;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;text-indent:100%;white-space:nowrap;overflow:hidden;flex-shrink:1}
+.mibreit-imageElement p{align-self:center; text-align: center;}
+.mibreit-contextMenu{position:absolute;width:100%;height:100%;padding-left:.5rem;padding-right:.5rem;z-index:11;text-align:center;font-size:1.5rem;background-color:#79756f}
+.mibreit-thumbs{overflow:hidden;display:flex;flex-direction:row}.mibreit-thumbs-scroller{position:relative;display:flex;flex-direction:row}
+.mibreit-thumbElement{position:relative;padding:.5rem;width:5rem;height:5rem;flex-shrink:0;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box}
+.mibreit-thumbElement:hover{transform:scale(1.1)}.mibreit-thumbElement .mibreit-center-box{border:solid;border-width:1px;overflow:hidden}
+.mibreit-thumbElement img{margin:auto;padding:0;align-self:center;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;text-indent:100%;white-space:nowrap;overflow:hidden;flex-shrink:0}
+
+.image-gallery {
+    position: relative;
+    height: 800px;
+}
